<resources>
    <string name="app_name">SimpleMovieApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_popular_films_and_movies">Best Popular Films and movies</string>
    <string name="wish_list">Wish List</string>
    <string name="offline">Offline</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="about_us">About us</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="connection_problem">Connection Problem!!</string>
    <string name="trailer">Trailer</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="movies_app">Movies App</string>
    <string name="offline_list">Offline List</string>
    <string name="title">Title</string>
</resources>
